Bug 37758 - UI: Particular dialogs with preview show useless toolbars
Summary: UI: Particular dialogs with preview show useless toolbars
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 RC1
Hardware: All All
: medium minor
Assignee: Cédric Bosdonnat
URL:
Whiteboard: target:4.1.0
Keywords: regression
: 49521 58857 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-30 09:12 UTC by sasha.libreoffice
Modified: 2014-02-11 12:22 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of mail merge preview on Linux (57.00 KB, image/jpeg)
2011-05-30 09:12 UTC, sasha.libreoffice
Details
mail merge screenshot on Windows XP German UI (52.05 KB, image/jpeg)
2011-05-30 09:14 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2011-05-30 09:12:17 UTC
Created attachment 47325 [details]
screenshot of mail merge preview on Linux

In Writer in Mail merge wizard on "step 5. Adjust layout" preview is shown with toolbars from Writer. It is no need to show them there.

Steps to reproduce:
0. Start Writer with any document
1. Do Tools - Mail Merge wizard
2. If step 5 is grayed, then click step 3, create address list with random items,and do all steps inside of this step. Step 5 then becomes available.
3. Clic step 5. There is preview of letter, with toolbars of Writer if they was previously enabled.

This was reproduced on LibO 3.4.rc1 on Mandriva 64 bit and Windows XP 32 bit

PS: Window of wizard can not be resized and is so small that is no much use of preview. Previev is so small that it is hard to understand there something.
Comment 1 sasha.libreoffice 2011-05-30 09:14:22 UTC
Created attachment 47326 [details]
mail merge screenshot on Windows XP German UI
Comment 2 Rainer Bielefeld Retired 2011-05-31 00:17:37 UTC
[Reproducible] with "LibreOffice 3.4.0RC2  – WIN7  Home Premium  (64bit) English UI [OOO340m1 (Build:12)]"

In reporter's step 3 I get wizard's step 5 active with checking "This document should contain a salutation" in Wizard step 4
Comment 3 Rainer Bielefeld Retired 2011-06-26 04:53:15 UTC
With a Daily Build nearby "LibreOffice 3.4.1RC1  - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:101)]" I also see that when I switch off/on preview of Menu "Insert > Indexes >  TOC". May be all dialogs with that particular kind of preview (until  now I did not find additional ones) are affected?

@Cédric
Please feel free to reassign if it’s not your area
Comment 4 manj_k 2012-05-05 10:51:38 UTC
Related to 'Bug 49521 - Writer UI: unneeded toolbars seen in AutoText preview (regression)'.
Comment 5 Urmas 2012-08-14 17:03:22 UTC
*** Bug 49521 has been marked as a duplicate of this bug. ***
Comment 6 Urmas 2012-08-14 17:04:22 UTC
Template preview is affected too.
Comment 7 manj_k 2012-08-14 17:51:53 UTC
Added keyword regression.
Not reproducible with LibreOffice 3.3.4.
Comment 8 Urmas 2012-12-29 12:45:19 UTC
*** Bug 58857 has been marked as a duplicate of this bug. ***
Comment 9 Urmas 2013-01-10 23:57:47 UTC
*** Bug 59214 has been marked as a duplicate of this bug. ***
Comment 10 Jan Holesovsky 2013-04-04 19:28:58 UTC
This is fixed now in master.
Comment 11 Commit Notification 2013-04-04 19:30:12 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4214ff23ad8f7247c8da8cddbf78bd75e98f17eb

fdo#37758: Really set the toolbar as hidden.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 sasha.libreoffice 2013-04-05 05:51:26 UTC
Thanks for fixing this bug