fdo#37758: Really set the toolbar as hidden.

Change-Id: If0cdf2fabb680f8dee811411f601b2954d29da58